Issue #3444344 by VinmayiSwamy, Utkarsh_33, Gauravvvv, Mithun S, kd_ace, smustgrave, mradcliffe, bnjmnm, jvest, xjm, idebr, quietone: Claro: Autocomplete dropdown bleeds through sticky table header

--- a/core/themes/claro/css/components/tableselect.css
+++ b/core/themes/claro/css/components/tableselect.css
@@ -130,3 +130,7 @@ tr.selected td {
     width: auto;
   }
 }
+
+.ui-autocomplete {
+  z-index: 501;
+}
