--- a/core/themes/claro/css/components/tableselect.pcss.css
+++ b/core/themes/claro/css/components/tableselect.pcss.css
@@ -116,3 +116,7 @@ tr.selected td {
     width: auto;
   }
 }
+
+.ui-autocomplete {
+  z-index: 501;
+}
